<resources>
    <string name="app_name">Books</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="cancel">Cancel</string>
    <string name="books">Books</string>
    <string name="my_orders">My Orders</string>
    <string name="log_out">Log Out</string>
    <string name="add_book">Publish Book</string>
    <string name="title">Book Name (Title)</string>
    <string name="organization">Organization</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="price">Price (Rs)</string>
    <string name="stock">Stock</string>
    <string name="description">Description</string>
    <string name="no_books">No Books Available</string>
    <string name="delete_confirm">Do you want to delete this book ?</string>
    <string name="delete">Delete</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="copy_count">How many copy you need</string>
    <string name="your_name">Your Name</string>
    <string name="address">Address: </string>
    <string name="pincode">Pincode: </string>
    <string name="email">Email: </string>
    <string name="copy">Copy:</string>
    <string name="no_orders">No Orders</string>
    <string name="time">Time:</string>
</resources>