<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    tools:context=".Fragments.RegisterFragment">

    <ImageView
        android:id="@+id/label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/sign_lay"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/reg_label" />

    <LinearLayout
        android:id="@+id/sign_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            style="@style/EditTextStyle"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            style="@style/EditTextStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pass"
            style="@style/EditTextStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/icon" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/reg_button_background"
        android:elevation="5dp"
        android:text="@string/create_account"
        android:textColor="@color/white" />

</RelativeLayout>