<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    tools:context=".AddBooksActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_book"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_t_circle_fill"
        android:padding="12dp"
        android:src="@drawable/ic_baseline_menu_book_24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/add_button"
        android:layout_below="@id/image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/title"
                android:padding="15dp" />

            <EditText
                android:id="@+id/org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/organization"
                android:padding="15dp" />

            <EditText
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/author"
                android:padding="15dp" />

            <EditText
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/category"
                android:padding="15dp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minHeight="80dp"
                android:padding="15dp"
                android:textAlignment="inherit" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/price"
                android:inputType="number"
                android:padding="15dp" />

            <EditText
                android:id="@+id/stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/stock"
                android:inputType="number"
                android:padding="15dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/reg_button_background"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/add_book" />
</RelativeLayout>