<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bottom_sheet_back">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20sp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/delete_confirm"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/sign_button_background"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/remove_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/remove_button_background"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/delete"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>