<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191919"
    tools:context=".PurchaseActivity">

    <RelativeLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="itemTransition"
        android:layout_marginBottom="10dp"
        android:background="@color/theme_color"
        android:elevation="5dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_menu_book_24" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/image"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/image"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/title" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/author"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/image"
            android:fontFamily="@font/roboto_regular"
            android:text="Category"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16sp"
            android:fontFamily="@font/roboto_bold"
            android:text="Rs 100"
            android:textColor="#FFC400"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buy_button"
        android:layout_below="@id/item">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/copy_count"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="Stock"
                    android:inputType="number"
                    android:padding="10dp"
                    android:text="1"
                    tools:ignore="HardcodedText" />

                <CheckBox
                    android:id="@+id/gift"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="This book is a Gift"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/your_name"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/email_address"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_background"
                android:editable="false"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Address"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="Address"
                android:inputType="textMultiLine"
                android:padding="10dp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="Pincode"
                android:inputType="number"
                android:padding="10dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Address only use for cash on delivery"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buy_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/reg_button_background"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/confirm_purchase" />

</RelativeLayout>